--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar>
+<div class="navbar">
+  <app-navbar></app-navbar>
+</div>
 
 <div class="body">
   <router-outlet></router-outlet>
