--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -1,11 +1,13 @@
-<mat-toolbar>
-  <!-- <button -->
-  <!--   mat-icon-button -->
-  <!--   class="example-icon" -->
-  <!--   aria-label="Example icon-button with menu icon" -->
-  <!-- > -->
-  <!--   <mat-icon>menu</mat-icon> -->
-  <!-- </button> -->
-  <span>🎲 Dice Odds</span>
-  <span class="example-spacer"></span>
+<mat-toolbar class="root">
+  <div class="content">
+    <!-- <button -->
+    <!--   mat-icon-button -->
+    <!--   class="example-icon" -->
+    <!--   aria-label="Example icon-button with menu icon" -->
+    <!-- > -->
+    <!--   <mat-icon>menu</mat-icon> -->
+    <!-- </button> -->
+    <span>🎲 Dice Odds</span>
+    <span class="example-spacer"></span>
+  </div>
 </mat-toolbar>
