style: add footer, improve navbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,6 @@
   max-width: var(--body-max-width);
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  margin-top: 20px;
+  margin: 30px auto;
+  margin-bottom: 50px;
 }
