--- a/src/app/features/dice/dice-group/dice-group.component.html
+++ b/src/app/features/dice/dice-group/dice-group.component.html
@@ -1,4 +1,4 @@
-<div class="root">
+<div matRipple class="root">
   <div class="dice-group">
     <div *ngFor="let dice of dices">
       <app-dice [dice]="dice" class="dice"></app-dice>
