--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,6 +1,9 @@
 .title {
   font-size: 5em;
   opacity: 0.6;
+  line-height: 0.8em;
+  letter-spacing: 3px;
+  font-weight: 500;
 }
 
 .input-container {
