--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -7,7 +7,8 @@
     <!-- > -->
     <!--   <mat-icon>menu</mat-icon> -->
     <!-- </button> -->
-    <span>🎲 Dice Odds</span>
-    <span class="example-spacer"></span>
+    <button mat-button class="title-btn">
+      <span>🎲 Dice Odds</span>
+    </button>
   </div>
 </mat-toolbar>
