--- a/src/app/features/navbar/navbar.component.scss
+++ b/src/app/features/navbar/navbar.component.scss
@@ -1,5 +1,13 @@
 .content {
+  display: flex;
+  align-items: center;
   width: 100%;
+  height: 100%;
   margin: 0 auto;
   max-width: var(--body-max-width);
+}
+
+.title-btn {
+  height: 80%;
+  font-size: 1em;
 }
