build: add build date to footer

--- a/src/app/features/footer/footer.component.html
+++ b/src/app/features/footer/footer.component.html
@@ -5,11 +5,12 @@
       <div class="description">
         <p>
           A simple tool to calculate and visually show the probability of
-          rolling a specific number with a set of dice.
-          <br />
+          rolling a specific number with a set of dice.<br />
           This tool may be useful for tabletop roleplaying games like Dungeons &
           Dragons or Parchis.
         </p>
+
+        <p>Build: {{ buildDate }}</p>
       </div>
     </div>
     <div class="right"></div>
