style: improve some css rules

--- a/src/app/features/dice/dice.component.html
+++ b/src/app/features/dice/dice.component.html
@@ -4,5 +4,5 @@
 
 <ng-template #diceTemplate>
   <!-- <object type="image/svg+xml" [data]="diceUrl"></object> -->
-  <img [src]="diceUrl" alt="dice" />
+  <img [src]="diceUrl" alt="dice" class="dice" />
 </ng-template>
