feat: add poker button in header

--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -7,8 +7,12 @@
     <!-- > -->
     <!--   <mat-icon>menu</mat-icon> -->
     <!-- </button> -->
-    <button mat-button class="title-btn">
+    <button routerLink="/" mat-button class="title-btn">
       <span>🎲 Dice Odds</span>
+    </button>
+
+    <button routerLink="/poker" mat-button class="title-btn">
+      <span>🎴 Poker Calculator</span>
     </button>
   </div>
 </mat-toolbar>
