feat: add "work in progress" notice to poker game

--- a/src/app/pages/poker/poker.component.html
+++ b/src/app/pages/poker/poker.component.html
@@ -1,4 +1,8 @@
 <div class="root">
+  <div style="margin-bottom: 32px; opacity: 0.6">
+    Work In Progress. Some statistics could be wrong.
+  </div>
+
   <div
     style="
       margin-bottom: 48px;
