feat: improve cards and layout design

--- a/src/app/features/poker/card-selector/card-selector.component.html
+++ b/src/app/features/poker/card-selector/card-selector.component.html
@@ -1,8 +1,8 @@
 <div class="root">
   <div class="cards-shelf">
-    @for (card of cards ; track card.imagen) {
-    <div class="card-container" (click)="selectCard(card.card)">
-      <img class="card-img" [src]="card.imagen" />
+    @for (card of cards ; track card) {
+    <div class="card-container" (click)="selectCard(card)">
+      <app-card [card]="card" [mode]="'selector'"></app-card>
     </div>
     }
   </div>
