--- a/src/app/features/poker/card/card.component.scss
+++ b/src/app/features/poker/card/card.component.scss
@@ -1,12 +1,71 @@
 .root {
-  max-width: 86px;
+  --default-card-width: 86px;
+  --default-card-height: 122px;
+
+  text-align: center;
+  font-size: 3em;
+  width: var(--default-card-width);
+  height: var(--default-card-height);
+  user-select: none;
+
+  &.selector {
+    width: calc(var(--default-card-width) * 0.7);
+    height: calc(var(--default-card-height) * 0.7);
+    font-size: 2em;
+
+    .card {
+      gap: 12px;
+    }
+
+    .suit {
+      width: 20px;
+    }
+  }
 
   img {
     width: 100%;
   }
 
+  &.villain {
+    width: calc(var(--default-card-width) * 0.5);
+    height: calc(var(--default-card-height) * 0.5);
+  }
+
   &:hover {
     opacity: 0.65;
     cursor: pointer;
+  }
+}
+.card {
+  background-color: white;
+  border-radius: 5px;
+  color: black;
+  font-weight: bold;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 24px;
+
+  .suit {
+    width: 35px;
+    margin: 0 auto;
+  }
+
+  &.diamond {
+    color: #3065cc;
+  }
+
+  &.heart {
+    color: #de4337;
+  }
+
+  &.club {
+    color: #2db829;
+  }
+
+  &.spade {
+    color: #2d2d2d;
   }
 }
