--- a/src/app/features/poker/card-selector/card-selector.component.scss
+++ b/src/app/features/poker/card-selector/card-selector.component.scss
@@ -5,6 +5,11 @@
 }
 
 .card-container {
+  &.disabled {
+    opacity: 0.65;
+    filter: grayscale(1);
+  }
+
   &:hover {
     opacity: 0.65;
     cursor: pointer;
