--- a/src/app/pages/poker/poker.component.html
+++ b/src/app/pages/poker/poker.component.html
@@ -41,6 +41,7 @@
   <div style="margin-top: 12px">
     <app-card-selector
       (cardSelected)="onCardSelected($event)"
+      [disabledCards]="cardsUsed"
     ></app-card-selector>
   </div>
 </div>
